--- a/config.json
+++ b/config.json
@@ -7,7 +7,8 @@
     "paths": {
         "configs_directory": "/home/letouwen/megagnn_graphgym/configs",
         "working_directory": "/home/letouwen/yamltool/",
-        "slurm_template_file": "/home/letouwen/megagnn_graphgym/run_federated.sh"
+        "slurm_template_file": "/home/letouwen/megagnn_graphgym/run_federated.sh",
+        "ignored_subdirectories": ["_OLD"]
     },
     "slurm": {
         "default_partition": "general",
